--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div id="loadingSpinner" class="loading-spinner"><div class="spinner"></div><p>正在处理...</p></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-    <script src="./js/app.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
